--- a/src/assets/css/modules.css
+++ b/src/assets/css/modules.css
@@ -14,7 +14,7 @@
 .content-card .block-glass, .final-page .block-glass,
 .content-pop .block-glass {
     width: 100%;
-    height: 55%;
+    height: inherit;
     padding: 48px 48px 24px 240px;
     margin: 0;
     border-radius: 60px 60px 0 0;
@@ -27,7 +27,7 @@
 .content-pop .block-glass {
     padding: 48px;
     width: 50vw;
-    height: 26vh;
+    height: 30vh;
     z-index: inherit;
 }
 
@@ -38,7 +38,7 @@
 
 .block-btn {
     width: 100%;
-    height: 45%;
+    height: inherit;
     background: var(--gradient-primary);
     box-shadow: var(--outside-glass), var(--inner-glass);
     border-radius: 0 0 60px 60px;
@@ -111,21 +111,6 @@
     position: relative;
 }
 
-/* @content ---------------------------------------------------------------------------------------------- */
-.sprint-content {
-    display: block;
-    position: fixed;
-    margin-bottom: 160px;
-    bottom: 0;
-    width: calc(100% - 96px);
-    height: 560px;
-    background-repeat: no-repeat;
-    background-position: center bottom;
-    background-size: 100%;
-    background-image: url('../images/img_sprint_bg.png');
-    pointer-events: none;
-}
-
 /* @list drag -list-group ---------------------------------------------------------------------------------------------- */
 .flex-ec.list-group {
     width: 100% !important;
@@ -165,26 +150,6 @@
     margin: 4px 12px;
 }
 
-/* ---捲軸底色--- */
-.list-area::-webkit-scrollbar-track {
-    background-color: transparent;
-    box-shadow: var(--down-neum);
-    border-radius: 10px;
-}
-
-/* ---捲軸寬度--- */
-.list-area::-webkit-scrollbar {
-    position: relative;
-    width: 8px;
-    background-color: transparent;
-}
-
-/* ---捲軸本體顏色--- */
-.list-area::-webkit-scrollbar-thumb {
-    background: var(--gradient-sec);
-    border-radius: 10px;
-}
-
 /* @list drag - drag item---------------------------------------------------------------------------------------------- */
 .list-group-item {
     position: relative;
@@ -216,25 +181,43 @@
     box-sizing: border-box;
 }
 
+/* @content ---------------------------------------------------------------------------------------------- */
+.sprint-content {
+    position: absolute;
+    top: 160px;
+    width: 1300px;
+    height: 560px;
+}
+
+.img_sprint {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-image: url('../images/img_sprint_bg.png');
+    pointer-events: none;
+}
+
 /* @list drag - drag item - for sprint process--------------------------------------------------------------------------------------------- */
 .list-group-1 {
-    position: fixed !important;
-    bottom: 490px;
-    left: 550px;
+    position: absolute;
+    top: 10%;
+    left: 40%;
     box-shadow: var(--down-neum);
 }
 
 .list-group-2 {
-    position: fixed !important;
-    bottom: 170px;
-    left: 500px;
+    position: absolute;
+    bottom: 18%;
+    left: 30%;
     box-shadow: var(--down-neum);
 }
 
 .list-group-3 {
-    position: fixed !important;
-    bottom: 170px;
-    left: 900px;
+    position: absolute;
+    bottom: 18%;
+    left: 60%;
     box-shadow: var(--down-neum);
 }
 
@@ -667,14 +650,13 @@ i, img {
 /* @圖示-image ---------------------------------------------------------------------------------------------- */
 .img-po {
     position: absolute;
+    top: 96px;
     left: 0;
-    bottom: 0;
     z-index: 10;
 }
 
 .content-card .img-po {
-    left: 70px;
-    bottom: 105px;
+    left: 120px;
 }
 
 .final-page .img-po {
@@ -690,17 +672,17 @@ i, img {
 }
 
 .img-bear {
-    position: absolute;
+    position: fixed;
     right: -60px;
     bottom: -48px;
     z-index: 10;
+    padding-top: 48px;
 }
 
 .img-engineer {
     position: absolute;
     top: 80px;
-    left: 0;
-    z-index: 10;
+    left: 20px;
 }
 
 /* @動畫 - animate ---------------------------------------------------------------------------------------------- */
@@ -739,7 +721,7 @@ i, img {
     animation: animate__fadeInLeft 2s;
 }
 
-.animate__headShake{
+.animate__headShake {
     animation: animate__headShake 2s;
 }
 
@@ -758,3 +740,4 @@ i, img {
     animation-delay: 3s;
     animation-fill-mode: backwards;
 }
+
